kubernetes/cilium/allow-argocd-to-keycloak.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-argocd-to-keycloak
  namespace: argocd
spec:
  description: Allow argocd pods to reach keycloak OIDC provider
  endpointSelector:
    matchLabels: {}
  egress:
  - toEntities:
    - cluster
