kubernetes/cilium/allow-dns-and-https-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-dns-and-https-egress
  namespace: argocd
spec:
  endpointSelector:
    matchLabels: {}
  egress:
  - toEndpoints:
    - {}
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
  - toEndpoints:
    - {}
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
      - port: "80"
        protocol: TCP
