kubernetes/cilium/ci-network-policies.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: woodpecker-egress
  namespace: ci
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: woodpecker
  egress:
    - toEntities:
        - kube-apiserver
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: woodpecker
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: gitea
            k8s:io.kubernetes.pod.namespace: gitea
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
          rules:
            http:
              - method: POST
                path: "/api/hook"
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: postgresql
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
            - port: "9153"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: traefik
            k8s:io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
    - toFQDNs:
        - matchPattern: "*dl.gitea.com"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: gitea-webhook-egress
  namespace: gitea
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: gitea
  egress:
    - toEntities:
        - kube-apiserver
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: ci
            app.kubernetes.io/instance: woodpecker
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "8000"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: postgresql
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: traefik
            k8s:io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
            - port: "443"
              protocol: TCP
    - toFQDNs:
        - matchPattern: keycloak.ebruno.fr
        - matchPattern: gitea.ebruno.fr
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: woodpecker-pipeline-egress
  namespace: ci
spec:
  endpointSelector:
    matchLabels:
      woodpecker-pipeline: "true"
  egress:
    - toEntities:
        - kube-apiserver
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: woodpecker
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: gitea
            k8s:io.kubernetes.pod.namespace: gitea
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/component: repository
            app.kubernetes.io/instance: nexus
            k8s:io.kubernetes.pod.namespace: nexus
      toPorts:
        - ports:
            - port: "8081"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: harbor
            app.kubernetes.io/component: core
            k8s:io.kubernetes.pod.namespace: harbor
      toPorts:
        - ports:
            - port: "8081"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: harbor
            app.kubernetes.io/component: jobservice
            k8s:io.kubernetes.pod.namespace: harbor
      toPorts:
        - ports:
            - port: "8081"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toCIDR:
        - "10.2.248.31/32"
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: traefik
            k8s:io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
            - port: "8443"
              protocol: TCP
            - port: "443"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: link-shortener-db
            k8s:io.kubernetes.pod.namespace: link-shortener
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: link-shortener-ci-db
            k8s:io.kubernetes.pod.namespace: ci
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: pact-broker
            k8s:io.kubernetes.pod.namespace: pact-broker
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "9292"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app: sonarqube
            k8s:io.kubernetes.pod.namespace: sonarqube
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
    - toFQDNs:
        - matchPattern: "gitea.ebruno.fr"
        - matchPattern: "*.github.com"
        - matchPattern: "*.githubusercontent.com"
        - matchPattern: "*.gitlab.com"
        - matchPattern: "*dl.gitea.com"
        - matchPattern: "*registry-1.docker.io*"
        - matchPattern: "*.docker.com"
        - matchPattern: "*.docker.io"
        - matchPattern: "*.gcr.io"
        - matchPattern: "*.quay.io"
        - matchPattern: "*proxy.golang.org*"
        - matchPattern: "*sum.golang.org*"
        - matchPattern: "*.pulumi.com"
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
